samples/_failures_safe/1761250375_abd088_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fab7749a.c: In function ‘main’:
./samples/SAFE/__tmp_fab7749a.c:209:16: error: expected ‘;’ at end of input
  209 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_fab7749a.c:209:9: error: expected declaration or statement at end of input
  209 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_fab7749a.c:209:9: error: expected declaration or statement at end of input
